--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,7 @@
 [versions]
 agp = "8.9.1"
-espressoCore = "3.7.0"
-hiltCompiler = "2.57.1"
-junit = "1.3.0"
 kotlin = "1.9.24"
 hiltAndroid = "2.48.1"
-mockkAndroid = "1.14.5"
 retrofit = "2.9.0"
 okhttp = "4.11.0"
 coreKtx = "1.12.0"
@@ -17,19 +13,17 @@ activityCompose = "1.11.0"
 composeBom = "2024.10.00"
 media3Decoder = "1.8.0"
 navigationSafeArgsGenerator = "2.9.4"
-uiTestJunit4 = "1.9.1"
+androidx-test = "1.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
-androidx-junit = { module = "androidx.test.ext:junit", version.ref = "junit" }
-androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "uiTestJunit4" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltAndroid" }
-hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hiltAndroid" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltAndroid" }
-hilt-compiler-v2571 = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
-kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
-mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkAndroid" }
+
+androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "androidx-test" }
+androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "androidx-test" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version = "1.1.5" }
+androidx-test-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.5.1" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
